maze.island.IslandMaze.scala.error
Erreur de compilation :
IslandMaze:10: error: missing arguments for method && in class Boolean;
follow this method with `_' if you want to treat it as a partially applied function
  while (!estFaceMur() && getDirection()=Direction.NORTH) {
                       ^IslandMaze:11: error: value update is not a member of plm.universe.Direction
    if (getDirection()=Direction.NORTH) {
        ^IslandMaze:21: error: value update is not a member of plm.universe.Direction
      if (getDirection()=Direction.WEST)
          ^IslandMaze:23: error: value update is not a member of plm.universe.Direction
      if (getDirection()=Direction.EAST)
          ^IslandMaze:25: error: value update is not a member of plm.universe.Direction
      if (getDirection()=Direction.SOUTH) {
          ^